# AI-technical-assignment

./: .env-example  .env-migrations-example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 76982d0ca1d5_add_external_id_employee_count_to_.py  a18fa5cacf68_add_company_related_tables.py  a55ac23a2187_add_company_related_tables.py  b651854be18f_add_news_related_tables.py  d97a2c8d4a9b_add_columns_to_companies_table.py  e260f7b1ea8e_add_company_related_tables.py  f946568f6b8e_add_enrichment_tables.py
example_datas/: company_ex6_요기요.json  company_news_with_vector.csv
nginx/conf.d/: searchright.conf
src/: containers.py  server.py
src/config/: config.py
src/db/: db.py
src/enrichment/application/dtos/: company.py  file_process.py
src/enrichment/application/exceptions/: embedding_exception.py  reader_exception.py
src/enrichment/application/interfaces/: embedding_interface.py  reader_interface.py
src/enrichment/application/ports/: company_search_service_port.py  news_search_service_port.py  text_embedding_client_port.py
src/enrichment/application/services/: company_info_reader.py  company_info_writer.py  news_reader.py
src/enrichment/controllers/: enrichment_controller.py
src/enrichment/controllers/dtos/: error_response.py  file_process.py
src/enrichment/domain/aggregates/: company_aggregate.py
src/enrichment/domain/dtos/: summary.py
src/enrichment/domain/entities/: company.py  company_alias.py  company_metrics_snapshot.py  new_chunk.py
src/enrichment/domain/repositories/: company_reader_port.py  company_repository_port.py  news_repository_port.py
src/enrichment/domain/specs/: company_spec.py  news_serch_spec.py
src/enrichment/domain/vos/: metrics.py
src/enrichment/infrastructure/dtos/: forest_of_hyuksin.py
src/enrichment/infrastructure/embeddings/: openai.py
src/enrichment/models/: __init__.py  company.py  company_alias.py  company_snapshot.py
src/inference/controllers/: talent_infer_controller.py
src/shared/: exceptions.py  swagger_responses.py
src/shared/cache/: cache_port.py  redis_cache_adapter.py
tests/: conftest.py
tests/enrichment/: conftest.py
tests/enrichment/infrastructure/: conftest.py
tools/: data_diff.py  embedding.py  init_data.py  insert_company_data.py  news_scraper.py  scrap_news.py
(+50 files in other folders)
